HokMob.App/ClientApp/src/app/home/home.component.scss
@import "variables";

.home-page {
  display: flex;
  justify-content: center;
  min-height: 500px;
  width: 100%;
  background-color: black;

  .nav-menu {
    display: flex;
    flex-direction: column;
    margin-right: $spacing-large;

    .nav-menu-item {
      color: white;
      font-size: large;
      margin-top: $spacing-large;
      margin-bottom: $spacing-large;
    }
  }

  .scores {
    display: flex;
    flex-direction: column;
    margin-right: $spacing-large;
  }

  .news-and-standings {
    color: white;
  }
}

// Desktop Styling
@media only screen and (min-width: $small-display-breakpoint) {
  .home-page {
    flex-direction: row;

    .nav-menu {
      min-width: 200px;
    }
    .scores {
      min-width: 500px;
    }
    .news-and-standings {
      min-width: 200px;
    }
  }
}

// Small Display
@media only screen and (min-width: $mobile-screen-breakpoint) and (max-width: $small-display-breakpoint){
  .home-page {
    flex-direction: row;

    .nav-menu {
      min-width: 130px;
    }
    .scores {
      min-width: 450px;
    }
    .news-and-standings {
      display: none;
    }
  }
}

// Mobile Styling
@media only screen and (max-width: $mobile-screen-breakpoint) {
  .home-page {
    flex-direction: column;

    .nav-menu {
      display: none;
    }
    .scores {
      width: 100%;
    }
    .news-and-standings {
      display: none;
    }
  }
}

